# cz-ico-api

./: pyproject.toml  pytest.ini  requirements.txt
src/icoapi/: ares.py  fastapi_app.py  validators.py  vat.py
src/icoapi.egg-info/: SOURCES.txt
tests/: test_api.py  test_validators.py  test_vat.py
